syntax = "proto3";
import "google/protobuf/empty.proto";

service NetCoreCourseService {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc DoSomethingForTheCourse(CourseRequest) returns (AlumnoResponse);
  rpc DoSomethingForTheCourse2(google.protobuf.Empty) returns (AlumnosResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
//Es un contracto estricto respecto del orden
//Eso le permite ser mas rapido que REST
message CourseRequest{
	int32 AlumnoId = 1;
}

message AlumnoGrpc{
	int32 id = 1;
	string name = 2;
}

message AlumnoResponse{
	bool success = 1;
	AlumnoGrpc alumno = 2;
}

message AlumnosResponse{
	bool success = 1;
	repeated AlumnoGrpc alumnos = 2;
}